# project-templates

./: README.md
.devcontainer/: devcontainer.json  postCreateCommand.sh
data-science/: cookiecutter.json
data-science/{{ cookiecutter.package_name }}/: .gitignore  Makefile  README.md  pyproject.toml
data-science/{{ cookiecutter.package_name }}/.devcontainer/: devcontainer.json  postCreateCommand.sh
data-science/{{ cookiecutter.package_name }}/configs/hydra/: base.yaml
data-science/{{ cookiecutter.package_name }}/configs/mlflow/: base.yaml
data-science/{{ cookiecutter.package_name }}/configs/optuna/: base.yaml
data-science/{{ cookiecutter.package_name }}/docs/source/: conf.py
data-science/{{cookiecutter.package_name}}/: .pre-commit-config.yaml  Makefile  README.md  poetry.toml  pyproject.toml
data-science/{{cookiecutter.package_name}}/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  postCreateCommand.sh
data-science/{{cookiecutter.package_name}}/configs/: config.yaml
data-science/{{cookiecutter.package_name}}/configs/hydra/: base.yaml
data-science/{{cookiecutter.package_name}}/configs/mlflow/: base.yaml
data-science/{{cookiecutter.package_name}}/docs/source/: conf.py
python-package/: cookiecutter.json
python-package/{{ cookiecutter.package_name }}/: .gitignore  LICENSE  Makefile  README.md  poetry.toml  pyproject.toml
python-package/{{ cookiecutter.package_name }}/.devcontainer/: devcontainer.json  postCreateCommand.sh
python-package/{{ cookiecutter.package_name }}/.github/workflows/: auto-release.yml  codeql.yml  publish-to-pypi.yml  ruff.yml  test.yml
python-package/{{cookiecutter.package_name}}/: .flake8  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  tox.ini
python-package/{{cookiecutter.package_name}}/.devcontainer/: Dockerfile  devcontainer.json
python-package/{{cookiecutter.package_name}}/.github/workflows/: auto-release.yml  codeql.yml  publish-to-pypi.yml  test.yml  tox.yml
streamlit/: cookiecutter.json
streamlit/{{cookiecutter.app_name}}/: .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
streamlit/{{cookiecutter.app_name}}/.devcontainer/: devcontainer.json  postCreateCommand.sh
streamlit/{{cookiecutter.app_name}}/.github/workflows/: codeql.yml
streamlit/{{cookiecutter.app_name}}/.streamlit/: config.toml
streamlit/{{cookiecutter.app_name}}/docs/source/: conf.py
streamlit/{{cookiecutter.app_name}}/src/{{ cookiecutter.app_name }}/: app.py
streamlit/{{cookiecutter.app_name}}/src/{{cookiecutter.app_name}}/: app.py
