[tool.poetry]
name = "{{cookiecutter.package_name}}"
version = "0.1.0"
description = "{{cookiecutter.description}}"
authors = ["{{cookiecutter.author}}"]
license = "{{cookiecutter.license}}"
readme = "README.md"

[tool.poetry.dependencies]
python = "^{{cookiecutter.python_version}}"

# Computation, machine learning, deep learning
numpy = "*"
scipy = "*"
# simpy = "*"
pandas = "*"
scikit-learn = "*"
# tslearn = "*"
# statsmodels = "*"
# xgboost = "*"
# lightgbm = "*"
# catboost = "*"
# tensorflow = "2.9.1"
# tensorflow-probability = "0.17.0"

# Visualization, image processing
matplotlib = "*"
seaborn = "*"
# plotly = "*"
# Pillow = "*"
# opencv-python = "*"
# graphviz = "*"

# Data profiling
# pandas_profiling = "*"

# JIT compilation, parallel processing
numba = "*"
joblib = "*"
# dask = {extras = ["complete"], version = "*"}
# dask-ml = {extras = ["complete"], version = "*"}

# Experiment management
mlflow = "*"

# Hyper parameter management.
hydra-core = "*"

# Feature enginerring, feature selection, optimization
featuretools = "*"
# featuretools = {extras = ["complete"], version = "*"}
Boruta = "*"
optuna = "*"

# Utilities
tqdm = "*"
python-dotenv = "*"
# tensorboard-plugin-profile = "*"
optuna-dashboard = "*"


[tool.poetry.dev-dependencies]
isort = "*"
black = "*"
flake8 = "*"
bandit = {extras = ["toml"], version = "*"}
# pre-commit = "*"
pytest = "*"
tox = "*"
sphinx = "*"
sphinx_rtd_theme = "*"

jupyterlab = "*"
ipywidgets = "*"
jupyterlab_flake8 = "*"
jupyterlab_code_formatter = "*"

[tool.isort]
profile = "black"
lines_after_imports = 2

[tool.bandit]
skips = ["B101", "B601"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
