[tool.poetry]
name = "{{cookiecutter.package_name}}"
version = "0.1.0"
description = "{{cookiecutter.description}}"
authors = ["{{cookiecutter.author}}"]
license = "{{cookiecutter.license}}"
readme = "README.md"

[tool.poetry.dependencies]
python = "^{{cookiecutter.python_version}}"

[tool.poetry.group.dev.dependencies]
isort = "*"
black = "*"
flake8 = "*"
bandit = {extras = ["toml"], version = "*"}
pre-commit = "*"
pytest = "*"
tox = "*"
sphinx = "*"
sphinx_rtd_theme = "*"

[tool.isort]
profile = "black"
lines_after_imports = 2

[tool.bandit]
skips = ["B101", "B601"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
