[tool.poetry]
name = "{{cookiecutter.package_name}}"
version = "0.0.0"
description = "{{cookiecutter.description}}"
authors = ["{{cookiecutter.author}}"]
license = "{{cookiecutter.license}}"
readme = "README.md"
homepage = "None"
repository = "None"
documentation = "None"
include = ["README.md"]

[tool.poetry.dependencies]
python = "^{{cookiecutter.python_version}}"

[tool.poetry.group.dev]
optional = true
[tool.poetry.group.dev.dependencies]
isort = "*"
black = "*"
flake8 = "*"
bandit = {extras = ["toml"], version = "*"}
pre-commit = "*"

[tool.poetry.group.test]
optional = true
[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-cov = "*"
pytest-xdist = "*"

[tool.poetry.group.docs]
optional = true
[tool.poetry.group.docs.dependencies]
sphinx = "*"
sphinx_rtd_theme = "*"

[tool.poetry-dynamic-versioning]
enable = true
[tool.isort]
profile = "black"
lines_after_imports = 2

[tool.black]
target-versions = ["py38", "py39", "py310", "py311"]

[tool.bandit]
skips = ["B101", "B601"]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
